[package]
name = "catscii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artem = { version = "1.1.5", default-features = false }
color-eyre = "0.6.2"
image = "0.24.5"
pretty-hex = "0.3.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.156", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
